--- a/index.html
+++ b/index.html
@@ -1,10 +1,88 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>Imzoughene</title>
+	<link rel="stylesheet" type="text/css" href="css/uikit.min.css">
 </head>
 <body>
+	<!--
 	<h1>the website is under maintenance ,please visit it later</h1>
 	<p><a href="https://imzoughene.netlify.com/">imzoughene</a></p>
+	-->
+
+
+	<div class="uk-child-width-expand@s uk-text-center" uk-grid>
+	    <div>
+	        <div class="uk-card uk-card-default uk-card-body uk-text-center">
+	        	<a href="https://imzoughene.netlify.com/" 
+	        	target="_blank" 
+	        	class="uk-text-large uk-text-success">
+	        	Imzoughene Youssef
+	        	</a>
+	        	<p class="uk-text-large uk-text-success">
+	        	Technicien Spécialisé en Développement Informatique
+	        	</p>
+	        </div>
+	    </div>
+	</div>
+	<div class="uk-child-width-expand@s uk-text-center" uk-grid>
+	    <div>
+	        <div class="uk-card uk-card-default uk-card-body">
+	        	<p>
+	        	
+				</p>
+	        </div>
+	       <div class="uk-card uk-card-default">
+	            <div class="uk-card-media-top">
+	                <img src="images/xibo.jpeg" alt="">
+	            </div>
+	            <div class="uk-card-body">
+	                <h3 class="uk-card-title">Media Top</h3>
+	                <p>Xibo is a powerful Digital Signage content management system and suite of signage players. According to Wikipedia, Digital Signage is: 
+
+					Digital signage is a form of electronic display that shows information, advertising and other messages. Digital signs (such as LCD, LED, plasma displays, or projected images) can be found in public and private environments, such as retail stores and corporate buildings.
+					</p>
+	            </div>
+      		</div>
+	    </div>
+	    <div>
+	        <div class="uk-card uk-card-default uk-card-body">Item</div>
+	    </div>
+	    <div>
+	        <div class="uk-card uk-card-default uk-card-body">Item</div>
+	    </div>
+	</div>
+
+
+    <div class="uk-child-width-expand@s uk-text-center" uk-grid>
+	    <div>
+	        <div class="uk-card uk-card-default uk-card-body">Item</div>
+	    </div>
+	    <div>
+	        <div class="uk-card uk-card-default uk-card-body">Item</div>
+	    </div>
+	    <div>
+	        <div class="uk-card uk-card-default uk-card-body">Item</div>
+	    </div>
+	</div>
+
+	<div class="uk-child-width-expand@s uk-text-center" uk-grid>
+	    <div>
+	        <div class="uk-card uk-card-default uk-card-body">Item</div>
+	    </div>
+	    <div>
+	        <div class="uk-card uk-card-default uk-card-body">Item</div>
+	    </div>
+	    <div>
+	        <div class="uk-card uk-card-default uk-card-body">Item</div>
+	    </div>
+	</div>
+
+
+
+	<script type="text/javascript" src="js/uikit.min.js"></script>
+	<script type="text/javascript" src="js/uikit-icons.min.js"></script>
+
 </body>
 </html>
