--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 	<meta charset="utf-8">
 	<title>Imzoughene</title>
 	<link rel="stylesheet" type="text/css" href="css/uikit.min.css">
+	<style type="text/css">
+		.thumbnail-img-class{
+			height: 220px;
+		}
+	</style>
 </head>
 <body>
 	<!--
@@ -33,7 +38,7 @@
 	    <div>
 	       <div class="uk-card uk-card-default">
 	            <div class="uk-card-media-top">
-	                <img src="images/xibo.jpeg" alt="">
+	                <img src="images/xibo.jpeg" alt="" class="thumbnail-img-class">
 	            </div>
 	            <div class="uk-card-body">
 	                <h3 class="uk-card-title">Xibo</h3>
@@ -47,7 +52,7 @@
 	    <div>
   			<div class="uk-card uk-card-default">
 	            <div class="uk-card-media-top">
-	                <img src="images/perf.jpeg" alt="">
+	                <img src="images/perf.jpeg" alt="" class="thumbnail-img-class">
 	            </div>
 	            <div class="uk-card-body">
 	                <h3 class="uk-card-title">Perf Informatique</h3>
@@ -86,13 +91,27 @@
 	    <div>
 	        <div class="uk-card uk-card-default">
 	            <div class="uk-card-media-top">
-	                <img src="images/xibo.jpeg" alt="">
+	                <img src="images/vcc.png" alt="" class="thumbnail-img-class">
 	            </div>
 	            <div class="uk-card-body">
-	                <h3 class="uk-card-title">Media Top</h3>
-	                <p>Xibo is a powerful Digital Signage content management system and suite of signage players. According to Wikipedia, Digital Signage is: 
-
-					Digital signage is a form of electronic display that shows information, advertising and other messages. Digital signs (such as LCD, LED, plasma displays, or projected images) can be found in public and private environments, such as retail stores and corporate buildings.
+	                <h3 class="uk-card-title">Application Windows de gestion de CVthèque</h3>
+	                <p>
+	                	Réaliser une Application Windows de gestion de CVthèque utilisant C sharp,Sqlserver,UML,Merise De 1ère Septembre 2017 à 31 Octobre
+						---------------
+						I create the application from scratch using c sharp, SQL server, uml, merise
+						-----------
+						The Application includes all of:
+						1-Login and registration system using file manipulation features in c sharp including (add new users, delete a user, change password, login).
+						2-Use a Modern UI called MetroFramework
+						3-Manipulate Exceptions and Errors using the features of OOP(Object-oriented programming) 
+						4-Create and Manage and Design the Database using UML, MERISE, and the features of SQL server
+						5-Create a form for adding candidates includes add pdf file (CV) into a database in SQL server
+						6-Create a Crud System for Candidates
+						(insert,update,delete,select)
+						7-Create Search System to search candidates with specific conditions
+						8-Use Visual Studio features to add a pdf viewer in the search results form
+						9-Create an E-mail sending system to contact candidates via their e-mail
+						10-Export search results in Excel file
 					</p>
 	            </div>
       		</div>	
@@ -104,13 +123,14 @@
 	    <div>
 	         <div class="uk-card uk-card-default">
 	            <div class="uk-card-media-top">
-	                <img src="images/xibo.jpeg" alt="">
+	                <img src="images/Dofus.png" alt="" class="thumbnail-img-class">
 	            </div>
 	            <div class="uk-card-body">
-	                <h3 class="uk-card-title">Media Top</h3>
-	                <p>Xibo is a powerful Digital Signage content management system and suite of signage players. According to Wikipedia, Digital Signage is: 
-
-					Digital signage is a form of electronic display that shows information, advertising and other messages. Digital signs (such as LCD, LED, plasma displays, or projected images) can be found in public and private environments, such as retail stores and corporate buildings.
+	                <h3 class="uk-card-title">HdvHanif</h3>
+	                <p>
+	                	La Conception et la réalisation d'un projet web de vente et d'achat des Kamas de Dofus dans une équipe de 3 personnes(un designer et un back end programmer), en fait être le responsable de la front-end développement
+						----
+						Projet freelance(Front end : html,css,Javascript,Jquery,Bootstrap)
 					</p>
 	            </div>
       		</div>	
