add more projects

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					</p>
 	            </div>
       		</div>
-	    </div>
+ 		</div>
 	    <div>
   			<div class="uk-card uk-card-default">
 	            <div class="uk-card-media-top">
@@ -135,74 +135,227 @@
 	            </div>
       		</div>	
 	    </div>
+   <div>
+   <div class="uk-card uk-card-default">
+	            <div class="uk-card-media-top">
+	                <img src="images/n.jpeg" alt="">
+	            </div>
+	            <div class="uk-card-body">
+	                <h3 class="uk-card-title">
+	                	Complete Website via Angular & Firebase & UiKit
+					</h3>
+	                <p>
+	                	projetComplete Website via Angular & Firebase & UiKit 
+						A website for self practicing purpose only
+
+
+					</p>
+	            </div>
+      		</div>	
+
+      </div>
 	    <div>
    <div class="uk-card uk-card-default">
 	            <div class="uk-card-media-top">
-	                <img src="images/xibo.jpeg" alt="">
+	                <img src="images/n.jpeg" alt="">
 	            </div>
 	            <div class="uk-card-body">
-	                <h3 class="uk-card-title">Media Top</h3>
-	                <p>Xibo is a powerful Digital Signage content management system and suite of signage players. According to Wikipedia, Digital Signage is: 
+	                <h3 class="uk-card-title">Console Apps via Java | Eclipse</h3>
+	                <p>1- Pizza Orders |
+						* The user should enter his favorite topping then he will get a message about the availability of his chosen topping in our pizza
+						2-Guess the Number
+						* The user must guess a random number between 0 and 9 then he will get a message contain the right number
+						3-scissors paper rock console game
+						* A console application of the famous game of scissors,paper,rock
+						4-Friends raffle game
+						* The user enter a number of his friends names and the computer choose randomly one of them to be the winner
+						5-trivias king Game
+						the user's answers several questions and get rewarded with 50 $ for each correct answer,however get lose 50 $ for each wrong answer
 
-					Digital signage is a form of electronic display that shows information, advertising and other messages. Digital signs (such as LCD, LED, plasma displays, or projected images) can be found in public and private environments, such as retail stores and corporate buildings.
+						-----------------
+						The console apps covers all principal concepts of java programming like objects,constructors,inheritance,polymorphism
 					</p>
 	            </div>
-      		</div>		    </div>
-	    <div>
-   <div class="uk-card uk-card-default">
-	            <div class="uk-card-media-top">
-	                <img src="images/xibo.jpeg" alt="">
-	            </div>
-	            <div class="uk-card-body">
-	                <h3 class="uk-card-title">Media Top</h3>
-	                <p>Xibo is a powerful Digital Signage content management system and suite of signage players. According to Wikipedia, Digital Signage is: 
-
-					Digital signage is a form of electronic display that shows information, advertising and other messages. Digital signs (such as LCD, LED, plasma displays, or projected images) can be found in public and private environments, such as retail stores and corporate buildings.
-					</p>
-	            </div>
-      		</div>		    </div>
+      		</div>		   
+      		 </div>
 	</div>
 
 	<div class="uk-child-width-expand@s uk-text-center" uk-grid>
 	    <div>
-   <div class="uk-card uk-card-default">
-	            <div class="uk-card-media-top">
-	                <img src="images/xibo.jpeg" alt="">
-	            </div>
-	            <div class="uk-card-body">
-	                <h3 class="uk-card-title">Media Top</h3>
-	                <p>Xibo is a powerful Digital Signage content management system and suite of signage players. According to Wikipedia, Digital Signage is: 
-
-					Digital signage is a form of electronic display that shows information, advertising and other messages. Digital signs (such as LCD, LED, plasma displays, or projected images) can be found in public and private environments, such as retail stores and corporate buildings.
-					</p>
-	            </div>
-      		</div>		    </div>
+   				<div class="uk-card uk-card-default">
+		            <div class="uk-card-media-top">
+		                <img src="images/n.jpeg" alt="">
+		            </div>
+		            <div class="uk-card-body">
+		                <h3 class="uk-card-title">Draw funny shapes via python and sublime text</h3>
+		                <p>Draw funny shapes via python and sublime text
+						</p>
+		            </div>
+      			</div>		    
+      	</div>
 	    <div>
-   <div class="uk-card uk-card-default">
-	            <div class="uk-card-media-top">
-	                <img src="images/xibo.jpeg" alt="">
-	            </div>
-	            <div class="uk-card-body">
-	                <h3 class="uk-card-title">Media Top</h3>
-	                <p>Xibo is a powerful Digital Signage content management system and suite of signage players. According to Wikipedia, Digital Signage is: 
-
-					Digital signage is a form of electronic display that shows information, advertising and other messages. Digital signs (such as LCD, LED, plasma displays, or projected images) can be found in public and private environments, such as retail stores and corporate buildings.
-					</p>
-	            </div>
-      		</div>		    </div>
+   				<div class="uk-card uk-card-default">
+			            <div class="uk-card-media-top">
+			                <img src="images/n.jpeg" alt="">
+			            </div>
+			            <div class="uk-card-body">
+			                <h3 class="uk-card-title">CvThèque Web Application</h3>
+			                <p>
+			                	CvThèque Web Application
+								using :
+								->Laravel
+								->Axios
+								->Bootstrap
+								->Vue Js
+								->Sweet Alert 2
+								->Vee-validate
+							</p>
+			            </div>
+      			</div>		  
+      	</div>
 	    <div>
-   <div class="uk-card uk-card-default">
+   				<div class="uk-card uk-card-default">
 	            <div class="uk-card-media-top">
-	                <img src="images/xibo.jpeg" alt="">
+	                <img src="images/n.jpeg" alt="">
 	            </div>
 	            <div class="uk-card-body">
-	                <h3 class="uk-card-title">Media Top</h3>
-	                <p>Xibo is a powerful Digital Signage content management system and suite of signage players. According to Wikipedia, Digital Signage is: 
-
-					Digital signage is a form of electronic display that shows information, advertising and other messages. Digital signs (such as LCD, LED, plasma displays, or projected images) can be found in public and private environments, such as retail stores and corporate buildings.
+	                <h3 class="uk-card-title">POS(Point Of Sale)</h3>
+	                <p>
+	                	a C#.Net POS Application | Restaurant point-of-sale
 					</p>
 	            </div>
-      		</div>		    </div>
+      		</div>		   
+   	    </div>
+
+</div>
+	<div class="uk-child-width-expand@s uk-text-center" uk-grid>
+<div>
+   	    <div class="uk-card uk-card-default">
+	            <div class="uk-card-media-top">
+	                <img src="images/n.jpeg" alt="">
+	            </div>
+	            <div class="uk-card-body">
+	                <h3 class="uk-card-title">Object Oriented PHP By Building a Complete Website</h3>
+	                <p>projetThis Project is a Functional website with OOP PHP.
+						............
+						-* built a shareboard application
+						-* built a complete mvc framework from scratch
+						-* built a complete login and registration system
+						-* creating a mysql database with phpmyadmin
+						-* building a database class to connect and interact with mysql
+						-* fetching data with php
+						-* inserting data with php
+						-* created multiple classes|objects and integrated into my application
+
+					</p>
+	            </div>
+      	</div>	
+
+</div>
+<div>
+
+
+	    <div class="uk-card uk-card-default">
+	            <div class="uk-card-media-top">
+	                <img src="images/n.jpeg" alt="">
+	            </div>
+	            <div class="uk-card-body">
+	                <h3 class="uk-card-title">Simple Bootstrap Website</h3>
+	                <p>Simple Bootstrap website including :
+						-*> a navigation bar 
+						-*> a home page 
+						-*> a footer section
+						-*> a header section
+						-*> a gallery page 
+						-*> an about us page
+						-*> a contact us page including a form to send comments
+					</p>
+	            </div>
+      	</div>	
+
+</div>
+<div>
+
+
+	    <div class="uk-card uk-card-default">
+	            <div class="uk-card-media-top">
+	                <img src="images/n.jpeg" alt="">
+	            </div>
+	            <div class="uk-card-body">
+	                <h3 class="uk-card-title">Creating One Page Business Site</h3>
+	                <p>projetKey Skills: WordPress!
+						-*> First step in this mini project is set up WordPress in a web hosting!
+						-*> The second step is installing and activating a wonderful free theme called Sydney!
+						-*> The third step is customizing the one page site in Wordpress platform for making a small Business web page!
+
+
+					</p>
+	            </div>
+      	</div>	
+</div>
+</div>
+<div class="uk-child-width-expand@s uk-text-center" uk-grid>
+<div>
+
+		<div class="uk-card uk-card-default">
+	            <div class="uk-card-media-top">
+	                <img src="images/n.jpeg" alt="">
+	            </div>
+	            <div class="uk-card-body">
+	                <h3 class="uk-card-title">Simple CRUD (Php & MySQL)</h3>
+	                <p>key skills : php,mysql,bootstrap,html,css,PhpmyAdmin,web hosting
+
+						The first step is creating the mini project in localhost 
+						-the mini project is a CRUD project with PHP and mysql 
+						having one table called Users with user id and user name and user email 
+						there are three buttons:
+						1-insert new user, 
+						2-update existent user, 
+						3-delete a user 
+						after that I transferred the mini project from localhost to a web hosting with a free domain
+					</p>
+	            </div>
+      	</div>	
+
+</div>
+<div>
+
+      	<div class="uk-card uk-card-default">
+	            <div class="uk-card-media-top">
+	                <img src="images/n.jpeg" alt="">
+	            </div>
+	            <div class="uk-card-body">
+	                <h3 class="uk-card-title">Simple Canvas</h3>
+	                <p>-*> Simple Canvas using html5 and javascript
+					</p>
+	            </div>
+      	</div>	
+</div>
+<div>
+
+     	<div class="uk-card uk-card-default">
+	            <div class="uk-card-media-top">
+	                <img src="images/n.jpeg" alt="">
+	            </div>
+	            <div class="uk-card-body">
+	                <h3 class="uk-card-title">Todo List Application</h3>
+	                <p>Todo List Application(php,mysql,bootstrap)
+						---------------------
+						for(mobile-small devices-medium devices & large devices) -> responsive web app
+						---------------------
+						1- First step in this mini app is creating Tasks table in Mysql then creating the CRUD system(inserting Task,deleting Task,updating Task,showing Tasks in a bootstrap table) using for insert a bootstrap Model ,using pagination classes from bootstrap then creating a search system
+						2- Second Step in this mini project is importing database from localhost and transferring the project to web hosting
+					</p>
+	            </div>
+      	</div>	
+
+
+
+
+
+
+
+   	    </div>
 	</div>
 
 
