--- a/index.html
+++ b/index.html
@@ -11,22 +11,58 @@
 	</style>
 </head>
 <body>
-	<!--
-	<h1>the website is under maintenance ,please visit it later</h1>
-	<p><a href="https://imzoughene.netlify.com/">imzoughene</a></p>
-	-->
 
+
+	<!--
+	<nav class="uk-navbar-container" uk-navbar>
+	<a class="uk-navbar-toggle" uk-navbar-toggle-icon href="#"></a>
+
+    <div class="uk-navbar-left">
+        <ul class="uk-navbar-nav">
+       
+            <li>
+            	<a  target="_blank"  href="http://imzoughene.netlify.com/">CV</a>
+            </li>
+           	<li>
+           		<a  target="_blank"  href="https://www.linkedin.com/in/imzoughene/">Linkedin</a>
+           	</li>
+           	<li>
+           		<a  target="_blank"  href="https://codepen.io/imzoughene/">Codepen</a>
+           	</li>
+           	<li>
+           		<a  target="_blank"  href="https://app.pluralsight.com/profile/youssef-imzoughene">
+					Pluralsight
+				</a>
+           	</li>
+			<li>
+				<a  target="_blank" href="https://www.youracclaim.com/user/imzoughene">Youracclaim</a>
+			</li>
+			<li>
+				<a  target="_blank" href="https://github.com/benfarice">Github #1</a>
+			</li>
+			<li>
+				<a  target="_blank" href="https://github.com/imzoughene">Github #2</a>
+			</li>
+			<li>
+				<a  target="_blank" href="https://gist.github.com/imzoughene">Github gist</a>			
+			</li>
+        </ul>
+
+    </div>
+</nav>
+	
+-->
 
 	<div class="uk-child-width-expand@s uk-text-center" uk-grid>
 	    <div>
-	        <div class="uk-card uk-card-default uk-card-body uk-text-center">
+	        <div class="uk-card uk-card-default uk-card-body ">
 	        	<a href="https://imzoughene.netlify.com/" 
 	        	target="_blank" 
 	        	class="uk-text-large uk-text-success">
 	        	Imzoughene Youssef
 	        	</a>
-	        	<div class="uk-text-center">
-	        		<img class="uk-border-circle" width="90" height="90" src="images/cv.jpg">
+	        	<div class="">
+	        		<img width="90" height="90" src="images/cv.jpg"><!-- class="uk-border-circle"  -->
 	        	</div>
 	        	<p class="uk-text-large uk-text-success">
 	        	Technicien Spécialisé en Développement Informatique
@@ -34,7 +70,7 @@
 	        </div>
 	    </div>
 	</div>
-	<div class="uk-child-width-expand@s uk-text-center" uk-grid>
+	<div class="uk-child-width-expand@s" uk-grid>
 	    <div>
 	       <div class="uk-card uk-card-default">
 	            <div class="uk-card-media-top">
@@ -119,7 +155,7 @@
 	</div>
 
 
-    <div class="uk-child-width-expand@s uk-text-center" uk-grid>
+    <div class="uk-child-width-expand@s " uk-grid>
 	    <div>
 	         <div class="uk-card uk-card-default">
 	            <div class="uk-card-media-top">
@@ -180,7 +216,7 @@
       		 </div>
 	</div>
 
-	<div class="uk-child-width-expand@s uk-text-center" uk-grid>
+	<div class="uk-child-width-expand@s " uk-grid>
 	    <div>
    				<div class="uk-card uk-card-default">
 		            <div class="uk-card-media-top">
@@ -228,7 +264,7 @@
    	    </div>
 
 </div>
-	<div class="uk-child-width-expand@s uk-text-center" uk-grid>
+	<div class="uk-child-width-expand@s " uk-grid>
 <div>
    	    <div class="uk-card uk-card-default">
 	            <div class="uk-card-media-top">
@@ -294,7 +330,7 @@
       	</div>	
 </div>
 </div>
-<div class="uk-child-width-expand@s uk-text-center" uk-grid>
+<div class="uk-child-width-expand@s " uk-grid>
 <div>
 
 		<div class="uk-card uk-card-default">
