--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
 	        </div>
 	    </div>
 	</div>
+	<div class="uk-alert-primary" uk-alert>
+    <a class="uk-alert-close" uk-close></a>
+    <p><strong>Le site web est encore dans la phase de programmation,merci de le visiter plus tard ,cette alert n'aura plus affiché si le codage de site termine</strong></p>
+	</div>
+
+
 	<div class="uk-child-width-expand@s" uk-grid>
 	    <div>
 	       <div class="uk-card uk-card-default">
