--- a/index.html
+++ b/index.html
@@ -75,8 +75,29 @@
     <p><strong>Le site web est encore dans la phase de programmation,merci de le visiter plus tard ,cette alert n'aura plus affiché si le codage de site termine</strong></p>
 	</div>
 
-
 	<div class="uk-child-width-expand@s" uk-grid>
+  		<div>
+	       <div class="uk-card uk-card-default">
+	            <div class="uk-card-media-top">
+	                <img src="projects/fish/images/fish.png" alt="" class="thumbnail-img-class">
+	            </div>
+	            <div class="uk-card-body">
+	                <h3 class="uk-card-title">Fish selling application</h3>
+	                <p>
+	                	A Web application I made for a company in Casablanca within an internship period
+					</p>
+					<a href="projects/fish/index.html" target="_blank">
+						<button class="uk-button uk-button-primary">Afficher</button>
+					</a>
+	            </div>
+      		</div>
+ 		</div>
+ 		<div></div>
+ 		<div></div>
+
+	</div>
+	<div class="uk-child-width-expand@s" uk-grid>
+	  
 	    <div>
 	       <div class="uk-card uk-card-default">
 	            <div class="uk-card-media-top">
