fish project code ordered list

--- a/projects/fish/index.html
+++ b/projects/fish/index.html
@@ -8,6 +8,7 @@
 <body>
 
 
+	<br><br><br><br>
 	<div class="uk-grid-medium uk-child-width-expand@s" uk-grid>
 	    <div class="uk-card uk-card-default uk-card-body">
 	        <h1>Fish selling application</h1>
@@ -15,23 +16,27 @@
 	    </div>
 	     <div class="uk-card uk-card-default uk-card-body">
 	        <p>
-	        	The features:
-				* A login form using two languages: Arabic & English
-				* Dashboard page includes two buttons a Start Selling button & a Get reports button(Bootstrap)
-				* After clicking the Start Selling button a new page loaded
-				* this new page includes a list of all sellers registered in the database and have an active status
-				* that list has a slider structure with a search text box
-				* the page has an Add new seller button which shows a model to insert the new seller's infos
-				* the search text box accepts Arabic and English characters
-				* After clicking on a seller's box (Jquery, Ajax) a new page has all selling infos of the seller selected showed
-				* After that the user will select the fish type and the weight selected and add them to the seller infos (Jquery,Ajax)
-				* Each single selling data has three options: delete it, update it, buy it
-				* the app is always connected to a printer machine, so there is on all pages a print icon to print info when clicking on it
-				* After entering the type of fish and the weight, the user selects a buyer by his name or his code
-				* The same operations for sellers exist for buyers, add new ones, update, delete, search
-				* Plus reporting area which within it the user can get reports on daily selling, the most active sellers, and the most active buyers
-				* Plus Admin Panel, which has total control of each component in the database, Plus reporting via charts Plus invoices via dynamic PDF file generation
-
+	        	The features:<br>
+	        	<ul type="A">
+	        		<li>A login form using two languages: Arabic & English</li>
+	        		<li>Dashboard page includes two buttons a Start Selling button & a Get reports button(Bootstrap)</li>
+	        		<li>After clicking the Start Selling button a new page loaded</li>
+	        		<li>this new page includes a list of all sellers registered in the database and have an active status</li>
+	        		<li>that list has a slider structure with a search text box</li>
+	        		<li>the page has an Add new seller button which shows a model to insert the new seller's infos</li>
+	        		<li>the search text box accepts Arabic and English characters</li>
+	        		<li>After clicking on a seller's box (Jquery, Ajax) a new page has all selling infos of the seller selected showed</li>
+	        		<li>After that the user will select the fish type and the weight selected and add them to the seller infos (Jquery,Ajax)</li>
+	        		<li>Each single selling data has three options: delete it, update it, buy it</li>
+	        		<li>the app is always connected to a printer machine, so there is on all pages a print icon to print info when clicking on it</li>
+	        		<li>After entering the type of fish and the weight, the user selects a buyer by his name or his code</li>
+	        		<li>The same operations for sellers exist for buyers, add new ones, update, delete, search
+	        		</li>
+	        		<li>Plus reporting area which within it the user can get reports on daily selling, the most active sellers, and the most active buyers</li>
+	        		<li>Plus Admin Panel, which has total control of each component in the database, Plus reporting via charts Plus invoices via dynamic PDF file generation</li>
+	        	</ul>
+		
+		
 
 	        </p>
 	    </div>
