--- a/projects/fish/index.html
+++ b/projects/fish/index.html
@@ -8,6 +8,108 @@
 <body>
 
 
+
+
+
+
+	<div class="uk-grid-medium uk-child-width-expand@s uk-text-center" uk-grid>
+	    <div>
+	        <div class="uk-card uk-card-default uk-card-body">
+	        	<a href="http://imzoughene.netlify.com/" target="_blank">
+	        		<button class="uk-button uk-button-primary uk-button-large">CV</button>
+	        	</a>
+	        </div>
+	    </div>
+	    <div>
+	        <div class="uk-card uk-card-default uk-card-body">
+	        	<a href="https://www.linkedin.com/in/imzoughene/" target="_blank">
+	        		<button class="uk-button uk-button-primary uk-button-large">Linkedin</button>
+	        	</a>
+	        </div>
+	    </div>
+	    <div>
+	        <div class="uk-card uk-card-default uk-card-body">
+				<a href="https://codepen.io/imzoughene/" target="_blank">
+	        		<button class="uk-button uk-button-primary uk-button-large">Codepen</button>
+	        	</a>
+	        </div>
+	    </div>
+	</div>
+
+
+	<div class="uk-grid-medium uk-child-width-expand@s uk-text-center" uk-grid>
+	    <div>
+	        <div class="uk-card uk-card-default uk-card-body">
+	        	<a href="https://app.pluralsight.com/profile/youssef-imzoughene" target="_blank">
+	        		<button class="uk-button uk-button-primary uk-button-large">Pluralsight</button>
+	        	</a>
+	        </div>
+	    </div>
+	    <div>
+	        <div class="uk-card uk-card-default uk-card-body">
+	        	<a href="https://www.youracclaim.com/user/imzoughene" target="_blank">
+	        		<button class="uk-button uk-button-primary uk-button-large">Youracclaim</button>
+	        	</a>
+	        </div>
+	    </div>
+	    <div>
+	        <div class="uk-card uk-card-default uk-card-body">
+				<a href="https://github.com/benfarice" target="_blank">
+	        		<button class="uk-button uk-button-primary uk-button-large">Github #1</button>
+	        	</a>
+	        </div>
+	    </div>
+	</div>
+
+
+	<div class="uk-grid-medium uk-child-width-expand@s uk-text-center" uk-grid>
+	    <div>
+	        <div class="uk-card uk-card-default uk-card-body">
+	        	<a href="https://github.com/imzoughene" target="_blank">
+	        		<button class="uk-button uk-button-primary uk-button-large">Github #2</button>
+	        	</a>
+	        </div>
+	    </div>
+	    <div>
+	        <div class="uk-card uk-card-default uk-card-body">
+	        	<a href="https://www.youracclaim.com/user/imzoughene" target="_blank">
+	        		<button class="uk-button uk-button-primary uk-button-large">Github gist</button>
+	        	</a>
+	        </div>
+	    </div>
+	    <div>
+	        <div class="uk-card uk-card-default uk-card-body">
+				<a href="https://my-certifications.netlify.com/" target="_blank">
+	        		<button class="uk-button uk-button-primary uk-button-large">Certifications</button>
+	        	</a>
+	        </div>
+	    </div>
+	</div>
+
+
+
+	<div class="uk-grid-medium uk-child-width-expand@s uk-text-center" uk-grid>
+	    <div>
+	        <div class="uk-card uk-card-default uk-card-body">
+	        	<a href="https://imzoughene-portfolio.netlify.com/" target="_blank">
+	        		<button class="uk-button uk-button-primary uk-button-large">Portfolio</button>
+	        	</a>
+	        </div>
+	    </div>
+	  
+	</div>
+
+
+
+
+
+
+
+
+
+
+
+
 	<br><br><br><br>
 	<div class="uk-grid-medium uk-child-width-expand@s" uk-grid>
 	    <div class="uk-card uk-card-default uk-card-body">
