--- a/index.html
+++ b/index.html
@@ -53,6 +53,82 @@
 	
 -->
 
+
+	<div class="uk-grid-medium uk-child-width-expand@s uk-text-center" uk-grid>
+	    <div>
+	        <div class="uk-card uk-card-default uk-card-body">
+	        	<a href="http://imzoughene.netlify.com/" target="_blank">
+	        		<button class="uk-button uk-button-primary">CV</button>
+	        	</a>
+	        </div>
+	    </div>
+	    <div>
+	        <div class="uk-card uk-card-default uk-card-body">
+	        	<a href="https://www.linkedin.com/in/imzoughene/" target="_blank">
+	        		<button class="uk-button uk-button-primary">Linkedin</button>
+	        	</a>
+	        </div>
+	    </div>
+	    <div>
+	        <div class="uk-card uk-card-default uk-card-body">
+				<a href="https://codepen.io/imzoughene/" target="_blank">
+	        		<button class="uk-button uk-button-primary">Codepen</button>
+	        	</a>
+	        </div>
+	    </div>
+	</div>
+
+
+	<div class="uk-grid-medium uk-child-width-expand@s uk-text-center" uk-grid>
+	    <div>
+	        <div class="uk-card uk-card-default uk-card-body">
+	        	<a href="https://app.pluralsight.com/profile/youssef-imzoughene" target="_blank">
+	        		<button class="uk-button uk-button-primary">Pluralsight</button>
+	        	</a>
+	        </div>
+	    </div>
+	    <div>
+	        <div class="uk-card uk-card-default uk-card-body">
+	        	<a href="https://www.youracclaim.com/user/imzoughene" target="_blank">
+	        		<button class="uk-button uk-button-primary">Youracclaim</button>
+	        	</a>
+	        </div>
+	    </div>
+	    <div>
+	        <div class="uk-card uk-card-default uk-card-body">
+				<a href="https://github.com/benfarice" target="_blank">
+	        		<button class="uk-button uk-button-primary">Github #1</button>
+	        	</a>
+	        </div>
+	    </div>
+	</div>
+
+
+	<div class="uk-grid-medium uk-child-width-expand@s uk-text-center" uk-grid>
+	    <div>
+	        <div class="uk-card uk-card-default uk-card-body">
+	        	<a href="https://github.com/imzoughene" target="_blank">
+	        		<button class="uk-button uk-button-primary">Github #2</button>
+	        	</a>
+	        </div>
+	    </div>
+	    <div>
+	        <div class="uk-card uk-card-default uk-card-body">
+	        	<a href="https://www.youracclaim.com/user/imzoughene" target="_blank">
+	        		<button class="uk-button uk-button-primary">Github gist</button>
+	        	</a>
+	        </div>
+	    </div>
+	    <div>
+	        <div class="uk-card uk-card-default uk-card-body">
+				<a href="https://my-certifications.netlify.com/" target="_blank">
+	        		<button class="uk-button uk-button-primary">Certifications</button>
+	        	</a>
+	        </div>
+	    </div>
+	</div>
+
+
 	<div class="uk-child-width-expand@s uk-text-center" uk-grid>
 	    <div>
 	        <div class="uk-card uk-card-default uk-card-body ">
