--- a/projects/fish/index.html
+++ b/projects/fish/index.html
@@ -16,21 +16,21 @@
 	    <div>
 	        <div class="uk-card uk-card-default uk-card-body">
 	        	<a href="http://imzoughene.netlify.com/" target="_blank">
-	        		<button class="uk-button uk-button-primary uk-button-large">CV</button>
+	        		<button class="uk-button uk-button-primary">CV</button>
 	        	</a>
 	        </div>
 	    </div>
 	    <div>
 	        <div class="uk-card uk-card-default uk-card-body">
 	        	<a href="https://www.linkedin.com/in/imzoughene/" target="_blank">
-	        		<button class="uk-button uk-button-primary uk-button-large">Linkedin</button>
+	        		<button class="uk-button uk-button-primary">Linkedin</button>
 	        	</a>
 	        </div>
 	    </div>
 	    <div>
 	        <div class="uk-card uk-card-default uk-card-body">
 				<a href="https://codepen.io/imzoughene/" target="_blank">
-	        		<button class="uk-button uk-button-primary uk-button-large">Codepen</button>
+	        		<button class="uk-button uk-button-primary">Codepen</button>
 	        	</a>
 	        </div>
 	    </div>
@@ -41,21 +41,21 @@
 	    <div>
 	        <div class="uk-card uk-card-default uk-card-body">
 	        	<a href="https://app.pluralsight.com/profile/youssef-imzoughene" target="_blank">
-	        		<button class="uk-button uk-button-primary uk-button-large">Pluralsight</button>
+	        		<button class="uk-button uk-button-primary">Pluralsight</button>
 	        	</a>
 	        </div>
 	    </div>
 	    <div>
 	        <div class="uk-card uk-card-default uk-card-body">
 	        	<a href="https://www.youracclaim.com/user/imzoughene" target="_blank">
-	        		<button class="uk-button uk-button-primary uk-button-large">Youracclaim</button>
+	        		<button class="uk-button uk-button-primary">Youracclaim</button>
 	        	</a>
 	        </div>
 	    </div>
 	    <div>
 	        <div class="uk-card uk-card-default uk-card-body">
 				<a href="https://github.com/benfarice" target="_blank">
-	        		<button class="uk-button uk-button-primary uk-button-large">Github #1</button>
+	        		<button class="uk-button uk-button-primary">Github #1</button>
 	        	</a>
 	        </div>
 	    </div>
@@ -66,21 +66,21 @@
 	    <div>
 	        <div class="uk-card uk-card-default uk-card-body">
 	        	<a href="https://github.com/imzoughene" target="_blank">
-	        		<button class="uk-button uk-button-primary uk-button-large">Github #2</button>
+	        		<button class="uk-button uk-button-primary">Github #2</button>
 	        	</a>
 	        </div>
 	    </div>
 	    <div>
 	        <div class="uk-card uk-card-default uk-card-body">
 	        	<a href="https://www.youracclaim.com/user/imzoughene" target="_blank">
-	        		<button class="uk-button uk-button-primary uk-button-large">Github gist</button>
+	        		<button class="uk-button uk-button-primary">Github gist</button>
 	        	</a>
 	        </div>
 	    </div>
 	    <div>
 	        <div class="uk-card uk-card-default uk-card-body">
 				<a href="https://my-certifications.netlify.com/" target="_blank">
-	        		<button class="uk-button uk-button-primary uk-button-large">Certifications</button>
+	        		<button class="uk-button uk-button-primary">Certifications</button>
 	        	</a>
 	        </div>
 	    </div>
@@ -92,7 +92,7 @@
 	    <div>
 	        <div class="uk-card uk-card-default uk-card-body">
 	        	<a href="https://imzoughene-portfolio.netlify.com/" target="_blank">
-	        		<button class="uk-button uk-button-primary uk-button-large">Portfolio</button>
+	        		<button class="uk-button uk-button-primary">Portfolio</button>
 	        	</a>
 	        </div>
 	    </div>
@@ -100,7 +100,23 @@
 	</div>
 
 
-
+	<div class="uk-child-width-expand@s uk-text-center" uk-grid>
+	    <div>
+	        <div class="uk-card uk-card-default uk-card-body ">
+	        	<a href="https://imzoughene.netlify.com/" 
+	        	target="_blank" 
+	        	class="uk-text-large uk-text-success">
+	        	Imzoughene Youssef
+	        	</a>
+	        	<div class="">
+	        		<img width="90" height="90" src="../../images/cv.jpg"><!-- class="uk-border-circle"  -->
+	        	</div>
+	        	<p class="uk-text-large uk-text-success">
+	        	Technicien Spécialisé en Développement Informatique
+	        	</p>
+	        </div>
+	    </div>
+	</div>
 
 
 
