--- a/index.html
+++ b/index.html
@@ -168,7 +168,22 @@
 	            </div>
       		</div>
  		</div>
- 		<div></div>
+ 		<div>
+ 			 <div class="uk-card uk-card-default">
+	            <div class="uk-card-media-top">
+	                <img src="projects/flotte/images/flote.png" alt="" class="thumbnail-img-class">
+	            </div>
+	            <div class="uk-card-body">
+	                <h3 class="uk-card-title">Plateforme de gestion de flotte:</h3>
+	                <p>
+	                	A Web application I made for a company in Casablanca within an internship period
+					</p>
+					<a href="projects/flotte/index.html" target="_blank">
+						<button class="uk-button uk-button-primary">Afficher</button>
+					</a>
+	            </div>
+      		</div>
+ 		</div>
  		<div></div>
 
 	</div>
