add background fonts to index header

--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
 	<meta charset="utf-8">
 	<title>Imzoughene</title>
 	<link rel="stylesheet" type="text/css" href="css/uikit.min.css">
+	<link rel="stylesheet" type="text/css" href="css/google.css">
+
 	<style type="text/css">
 		.thumbnail-img-class{
 			height: 220px;
 		}
+		#myheader .uk-card-default{
+			background-color: black;
+			padding: 13px;
+			color: white;
+			font-family: 'Dancing Script', cursive;   
+
+		}
+
 	</style>
 </head>
 <body>
@@ -350,7 +360,7 @@
 	</div>
 
 
-	<div class="uk-child-width-expand@s uk-text-center" uk-grid>
+	<div class="uk-child-width-expand@s uk-text-center" uk-grid id="myheader">
 	    <div>
 	        <div class="uk-card uk-card-default uk-card-body ">
 	        	<a href="https://imzoughene.netlify.com/" 
@@ -358,7 +368,8 @@
 	        	class="uk-text-large uk-text-success">
 	        	Imzoughene Youssef
 	        	</a>
-	        	<div class="">
+	        	<br>
+	        	<div class="uk-padding">
 	        		<img width="90" height="90" src="images/cv.jpg"><!-- class="uk-border-circle"  -->
 	        	</div>
 	        	<p class="uk-text-large uk-text-success">
@@ -418,7 +429,7 @@
 	            <div class="uk-card-body">
 	                <h3 class="uk-card-title">Xibo</h3>
 	                <p>Xibo is a powerful Digital Signage content management system and suite of signage players. According to Wikipedia, Digital Signage is: 
-
+	                <br>
 					Digital signage is a form of electronic display that shows information, advertising and other messages. Digital signs (such as LCD, LED, plasma displays, or projected images) can be found in public and private environments, such as retail stores and corporate buildings.
 					</p>
 	            </div>
@@ -432,32 +443,33 @@
 	            <div class="uk-card-body">
 	                <h3 class="uk-card-title">Perf Informatique</h3>
 	              	<p>
-			        	*-> I worked at Perf Informatique SARL on several web projects
-						*-> My role is participating with a female colleague which is a webmaster working under a software engineer as a team leader to create these projects from scratch
-						*-> My job was including all of:
-						1-Fetching data from SQL server using PHP
-						2-Create Crud System uses SQL server using PHP (insert, update, delete, select)
-						3-Creating front end pages to interact with users (using html, css, javascript, jquery, bootstrap)
-						4-Create dynamic Pdf files using TCPDF
-						5-Create dynamic charts using Highcharts with Js and PHP
-						6-Send Daily E-mails using PHP (phpmailer)
-						7-Database Design: -> Create and Design Projects's Databases and manage SQL server
-						8-Use Xml with PHP to make a synchronous system on the projects working offline
-						9-These projects include all of {Materialize.css,Skitter.js, animate.css, google Fonts, recaptcha, fotorama.js
-						jquery UI, lightbox, FileSaver.js, bootstrap-timepicker, fontawesome, jquery.timepicker,pretty-checkbox.css, dataTables.bootstrap.css,daterangepicker.js. bxSlider.js ......}
-						10-Create Login and registration system for these apps
-						11-Use Ajax to make apps more performance
-						12- I created a custom multi language system in all these projects which are multi language applications
-						13-the languages in my custom system include Arabic, french and English
-						14-Manipulate Google Maps API && Facebook API && Twitter API +Google Plus API
-						15-Create a contact us form to receive users' messages
-						16-Generate QR code (quick response code)
-						17-Plus other tasks in programmation
-						-----------------------------------------------
-						I worked in those projects with native php
-
-						that's was giving me a great experience of six months with pure php
-						Voir moins
+	              		<ul type="A">
+	              			<li>I worked at Perf Informatique SARL on several web projects</li>
+	              			<li>My role is participating with a female colleague which is a webmaster working under a software engineer as a team leader to create these projects from scratch</li>
+	              			<li>My job was including all of:</li>
+	              			<li>Fetching data from SQL server using PHP</li>
+	              			<li>Create Crud System uses SQL server using PHP (insert, update, delete, select)</li>
+	              			<li>Creating front end pages to interact with users (using html, css, javascript, jquery, bootstrap)</li>
+	              			<li>Create dynamic Pdf files using TCPDF</li>
+	              			<li>Create dynamic charts using Highcharts with Js and PHP</li>
+	              			<li>Send Daily E-mails using PHP (phpmailer)</li>
+	              			<li>Database Design: -> Create and Design Projects's Databases and manage SQL server</li>
+	              			<li>Use Xml with PHP to make a synchronous system on the projects working offline</li>
+	              			<li>These projects include all of {Materialize.css,Skitter.js, animate.css, google Fonts, recaptcha, fotorama.js
+						    jquery UI, lightbox, FileSaver.js, bootstrap-timepicker, fontawesome, jquery.timepicker,pretty-checkbox.css, dataTables.bootstrap.css,daterangepicker.js. bxSlider.js ......}</li>
+						    <li>Create Login and registration system for these apps</li>
+						    <li>Use Ajax to make apps more performance</li>
+						    <li>I created a custom multi language system in all these projects which are multi language applications</li>
+						    <li>the languages in my custom system include Arabic, french and English</li>
+						    <li>Manipulate Google Maps API && Facebook API && Twitter API +Google Plus API</li>
+						    <li>Create a contact us form to receive users' messages</li>
+						    <li>Generate QR code (quick response code)</li>
+						    <li>Plus other tasks in programmation</li>
+						    <li>I worked in those projects with native php</li>
+						    <li>that's was giving me a great experience of six months with pure php</li>
+	              		</ul>
+			       
+						
 			        </p>
 	            </div>
       		</div>	        
