add background fonts to index header flotte atlas fish projects

--- a/projects/flotte/index.html
+++ b/projects/flotte/index.html
@@ -4,6 +4,17 @@
 	<meta charset="utf-8">
 	<title>Youssef Imzoughene</title>
 	<link rel="stylesheet" type="text/css" href="../../css/uikit.min.css">
+	<link rel="stylesheet" type="text/css" href="../../css/google.css">
+
+	<style type="text/css">
+			#myheader .uk-card-default{
+			background-color: black;
+			padding: 13px;
+			color: white;
+			font-family: 'Dancing Script', cursive;   
+
+		}
+	</style>
 </head>
 <body>
 
@@ -320,7 +331,7 @@
 	</div>
 
 
-	<div class="uk-child-width-expand@s uk-text-center" uk-grid>
+	<div class="uk-child-width-expand@s uk-text-center" uk-grid <br>>
 	    <div>
 	        <div class="uk-card uk-card-default uk-card-body ">
 	        	<a href="https://imzoughene.netlify.com/" 
@@ -328,6 +339,7 @@
 	        	class="uk-text-large uk-text-success">
 	        	Imzoughene Youssef
 	        	</a>
+	        	<br>
 	        	<div class="">
 	        		<img width="90" height="90" src="../../images/cv.jpg"><!-- class="uk-border-circle"  -->
 	        	</div>
